# rust-download-installer-poc

./: Cargo.toml  README.md
src/: app.js  main.rs  styles.css
