[package]
name = "rust-download-installer-poc"
version = "0.1.0"
authors = ["Guillermo Gutierrez <guillegr123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = { version = "0.7" }
#reqwest = "0.11.0"
ureq = "2.0.1"
#futures = "0.3.12"
